--- a/WebDashboard/package.json
+++ b/WebDashboard/package.json
@@ -19,6 +19,7 @@
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.12.0",
     "recharts": "^3.6.0",
+    "socket.io-client": "^4.8.3",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
