--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^2.2.2",
     "cors": "^2.8.5",
     "express": "^5.2.1",
-    "socket.io": "^4.8.3"
+    "socket.io": "^4.8.3",
+    "sqlite3": "^5.1.7"
   }
 }
